--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,15 +1,14 @@
 body {
-    margin: 0;
-    padding: 0;
     font-family: 'Poppins', sans-serif;
     color: #000000;
     background-color: #FAF0E6;
   }
   
   .hero__container {
+    padding:  5%;
     display: flex;
     flex-direction: row;
-    padding: 5%;
+    justify-content: space-between;
   }
 
   .btn__container {
@@ -27,6 +26,7 @@ body {
     outline: none;
     color: #f7f7f7;
     border: 1px solid transparent;
+    border-radius: 3%;
     text-decoration: none;
   }
   
@@ -59,29 +59,25 @@ body {
     font-size: 1.75rem;
     color: #000000;
   }
+
+  
   .slider_img-box {
-    width: 95%;
+    /* width: 95%; */
     margin: 0 auto;
   }
   
   .slider_img-box img {
-    margin-top: 10%;
-    width: 85%;
+    margin-top:7.5%;
+    width: 65%;
     border-radius: 2%;
   }
-  
-  .slider_item-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
+    
+  .slider_item-detail {
+
   }
-  
   .slider_item-detail h1 {
     font-weight: 700;
     font-size: 50px;
-    width: 90%;
   }
   
   
