Updated new listings post route

--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -4671,6 +4671,7 @@ input[type="button"].btn-block {
 .card-deck {
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -ms-flex-direction: column;
   flex-direction: column;
 }
